made a header, menu and promo page

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,124 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="icon" href="images/logo.svg">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__container container">
+        <div class="header__wrapper">
+          <img
+            class="header__burger"
+            src="./images/burger-icon.svg"
+            alt="Menu"
+          >
+
+          <a href="#" class="header__logo logo">
+            <img
+              class="logo__img"
+              src="./images/logo.svg"
+              alt="Logo"
+            >
+          </a>
+
+          <div class="header__events">події</div>
+        </div>
+
+        <nav class="header__nav nav">
+          <div class="nav__container container">
+            <img
+              class="nav__close"
+              src="images/close-icon.svg"
+              alt="close"
+            >
+            <ul class="nav__list nav__list--close">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#events" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Відвідування
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Стати нашим другом
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Магазин
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Блог
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+            <a href ="#" class="nav__logo logo">
+              <img
+                class="logo__img"
+                src="images/logo.svg"
+                alt="logo"
+                width="35"
+                height="42"
+              >
+            </a>
+          </div>
+        </nav>
+      </div>
+    </header>
+
+    <main class="main-page">
+      <section class="main-page__promo promo" id="home">
+        <img
+          src="./images/promo-bg.png"
+          alt="Museum"
+          class="promo__img"
+          width="320"
+          height="300"
+        >
+
+        <div class="promo__container">
+          <h1 class="promo__title main-title">
+            Худож<span class="main-title__part">ній</span> Музей
+          </h1>
+
+          <div class="promo__button">
+            <a
+              href="#"
+              class="promo__link"
+            >
+              Квитки
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
