--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,141 @@
           </div>
         </div>
       </section>
+
+      <section class="main-page__events events" id="events">
+        <div class="events__container container">
+          <h2 class="events__title">
+            Актуальні події
+          </h2>
+
+          <article class="events__item event">
+            <div class="event__wrapper event__wrapper--left">
+              <a href="#" class="event__photo event__photo--left">
+                <picture>
+                  <source
+                    media="(min-width: 1920px)"
+                    srcset="./images/event1-desktopL.jpg"
+                  >
+                  <source
+                    media="(min-width: 1280px)"
+                    srcset="./images/event1-desktop.jpg"
+                  >
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="./images/event1-tablet.jpg"
+                  >
+                  <img
+                    class="event__img"
+                    src="./images/event1-mobile.jpg"
+                    alt="Фотографія події"
+                  >
+                </picture>
+              </a>
+
+              <div class="event__info event__info--left">
+                <div class="event__box">
+                  <p class="event__type">Виставка</p>
+                  <p class="event__date">26.08 - 29.11.2019</p>
+                </div>
+
+                <h3 class="event__title">
+                  <a href="#" class="event__link event__link--exhibition">
+                    Йду і повертаюсь
+                  </a>
+                </h3>
+
+                <p class="event__text">
+                  Національний Художній Музей України презентує унікальну частину колекції
+                  Градобанку - українське мистецтво другої половини 1980&nbsp;-&nbsp;1995 років.
+                </p>
+              </div>
+            </div>
+          </article>
+
+          <article class="events__item event">
+            <div class="event__wrapper event__wrapper--right">
+              <a href="#" class="event__photo event__photo--right">
+                <picture>
+                  <source
+                    media="(min-width: 1920px)"
+                    srcset="./images/event2-desktopL.jpg"
+                  >
+                  <source
+                    media="(min-width: 1280px)"
+                    srcset="./images/event2-desktop.jpg"
+                  >
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="./images/event2-tablet.jpg"
+                  >
+                  <img
+                    class="event__img"
+                    src="./images/event2-mobile.jpg"
+                    alt="Фотографія події"
+                    >
+                </picture>
+              </a>
+
+              <div class="event__info event__info--right">
+                <div class="event__box">
+                  <p class="event__type">Виставка</p>
+                  <p class="event__date">26.08 - 29.11.2019</p>
+                </div>
+
+                <h3 class="event__title">
+                  <a href="#" class="event__link event__link--exhibition">
+                    І спогади і мрії
+                  </a>
+                </h3>
+
+                <p class="event__text">
+                  Національний художній музей України до 100 річчя від дня народження
+                  видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку
+                  «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+
+        <article class="events__item events__item--center">
+          <a href="#" class="event__photo event__photo--center">
+            <picture>
+              <source
+                media="(min-width: 1920px)"
+                srcset="images/event3-desktopL.jpg"
+              >
+              <source
+                media="(min-width: 1280px)"
+                srcset="images/event3-desktop.jpg"
+              >
+              <source
+                media="(min-width: 768px)"
+                srcset="images/event3-tablet.jpg"
+              >
+              <img
+                class="event__img"
+                src="images/event3-mobile.jpg"
+                alt="Фотографія події"
+                >
+            </picture>
+          </a>
+          
+          <div class="event__info event__info--center">
+            <div class="event__box event__box--center">
+              <p class="event__type">Лекція</p>
+              <p class="event__date">26/08/2019 - 11:00</p>
+            </div>
+
+            <h3 class="event__title">
+              <a href="#" class="event__link">
+                Від класицизму до романтизму
+              </a>
+            </h3>
+          </div>
+        </article>
+      </section>
+
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
