--- a/src/index.html
+++ b/src/index.html
@@ -239,7 +239,7 @@
                 >
             </picture>
           </a>
-          
+
           <div class="event__info event__info--center">
             <div class="event__box event__box--center">
               <p class="event__type">Лекція</p>
@@ -253,6 +253,47 @@
             </h3>
           </div>
         </article>
+      </section>
+
+      <section class="main-page__gallery gallery" id="gallery">
+        <div class="gallery__container container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+
+          <div class="gallery__wrapper">
+            <img
+              src="./images/gallery1-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+            <img
+              src="./images/gallery2-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+            <img
+              src="./images/gallery3-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+            <img
+              src="./images/gallery4-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+            <img
+              src="./images/gallery5-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+            <img
+              src="./images/gallery6-desktop.jpg"
+              alt="Фото з галереї"
+              class="gallery__photo"
+            >
+          </div>
+        </div>
       </section>
 
     </main>
