--- a/src/index.html
+++ b/src/index.html
@@ -296,6 +296,35 @@
         </div>
       </section>
 
+      <section class="main-page__subscription subscription">
+        <div class="subscription__container container">
+          <h2 class="subscription__title">
+            Підписка
+          </h2>
+
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form
+            action="#"
+            class="subscription__form form"
+            method="GET"
+            name="subscription"
+          >
+            <input
+              type="email"
+              class="form__input"
+              name="email"
+              placeholder="E-mail"
+              required
+            >
+
+            <button class="form__button"></button>
+          </form>
+        </div>
+      </section>
+
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
