--- a/src/index.html
+++ b/src/index.html
@@ -326,6 +326,181 @@
       </section>
 
     </main>
+
+    <footer class="footer-page footer">
+      <div class="footer__container container">
+        <div class="footer__inner">
+          <div class="footer__top">
+            <a href="#home" class="footer__logo logo">
+              <img
+                class="logo__img"
+                src="images/logo.svg"
+                alt="Logo"
+              >
+            </a>
+            <div class="footer__socials socials">
+              <ul class="socials__list">
+                <li class="socials__item">
+                  <a
+                    rel="noopener"
+                    class="socials__link"
+                    href="https://www.facebook.com/namu.museum/"
+                    target="_blank"
+                  >
+                    <img
+                      class="socials__img"
+                      src="images/fb-icon.svg"
+                      alt="Посилання на сторінку музею в Facebook"
+                    >
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a
+                    rel="noopener"
+                    class="socials__link"
+                    href="https://instagram.com/namu.museum?igshid=7erp91t0u2vq"
+                    target="_blank"
+                  >
+                    <img
+                      class="socials__img"
+                      src="images/insta-icon.svg"
+                      alt="Посилання на сторінку музею в Instagram"
+                    >
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer__wrapper">
+            <div class="footer__info info">
+              <div class="info__box">
+                <h3 class="info__title">
+                  Графік роботи:
+                </h3>
+                <div class="info__text info__text--time">
+                  <p><span class="info__time">12:00 — 20:00 </span>середа</p>
+                  <p><span class="info__time">12:00 — 20:00 </span> четвер</p>
+                  <p><span class="info__time">12:00 — 20:00 </span>п’ятниця</p>
+                  <p><span class="info__time">11:00 — 19:00 </span>субота</p>
+                  <p><span class="info__time">11:00 — 19:00 </span>неділя</p>
+                </div>
+                <br>
+                <div class="info__text">
+                  <h3 class="info__title">
+                    Вихідні:
+                  </h3>
+                  <p>понеділок, вівторок.<br><br>
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </p>
+                </div>
+              </div>
+              <div class="info__box">
+                <h3 class="info__title" id="contacts">
+                  Контакти:
+                </h3>
+                <div class="info__text">
+                  <a
+                    rel="noopener"
+                    class="info__link"
+                    href="https://goo.gl/maps/7wdo5SQXxGW4GnnN8"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6<br>
+                    Київ, 01001
+                  </a>
+                  <br>
+                  <a class="info__link" href="tel:+380442781357">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                  <br>
+                  <a class="info__link" href="tel:+3804427874545">
+                    факс +38 (044) 278-74-54
+                  </a>
+                  <br>
+                  <a class="info__link" href="mailto:info@namu.kiev.ua">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="footer__info info">
+              <ul class="info__list">
+                <li class="info__item">
+                  <a href="#gallery" class="info__link">
+                    Галерея
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a href="#events" class="info__link">
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a
+                    href="#"
+                    class="info__link"
+                  >
+                    Відвідування
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a
+                    href="#"
+                    class="info__link"
+                  >
+                    Стати нашим другом
+                  </a>
+                </li>
+              </ul>
+              <ul class="info__list">
+                <li class="info__item">
+                  <a
+                    href="#"
+                    class="info__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a
+                    href="#"
+                    class="info__link"
+                  >
+                    Магазин
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a
+                    href="#"
+                    class="info__link"
+                  >
+                    Блог
+                  </a>
+                </li>
+                <li class="info__item">
+                  <a
+                    href="#contacts"
+                    class="info__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer__copyright copyright">
+          <p class="copyright__text">
+            Designed by Zhyriada Marina
+          </p>
+          <p class="copyright__text">
+            Copyright © 2021. All Rights Reserved
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
