--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,364 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__content">
     <script type="text/javascript" src="scripts/main.js"></script>
+
+    <header class="page__section header">
+      <div class="header__content">
+        <div class="header__top-actions top-actions">
+          <a href="#menu" class="top-actions__icon"></a>
+          <a href="#" class="top-actions__logo logo">NA <br> MU</a>
+        </div>
+
+        <div class="header__image-container">
+          <img
+            src="images/header-image.png"
+            alt="NAMU"
+            class="header__image"
+          >
+        </div>
+
+        <div class="header__text">
+          <h1 class="header__title">ХУДОЖ<span class="header__outline">НІЙ</span> МУЗЕЙ</h1>
+          <a href="#" class="button header__button">
+            <p class="button__text">КВИТКИ</p>
+          </a>
+        </div>
+
+        <a href="#events" class="side-link header__side-link">
+          <p class="side-link__text">події</p>
+        </a>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="menu__content">
+        <a href="#" class="menu__icon"></a>
+        <a href="#" class="menu__logo logo logo--onWhite">NA <br> MU</a>
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#gallery" class="menu__link">Галерея</a>
+          </li>
+          <li class="menu__item">
+            <a href="#events" class="menu__link">Виставки та події</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Відвідування</a>
+          </li>
+          <li class="menu__item">
+            <a href="#subscribe" class="menu__link">Стати нашим другом</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Про Нас</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Магазин</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Блог</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Контакти</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+
+    <section class="page__section page__section--events events" id="events">
+      <h2 class="events__title title">Актуальні події</h2>
+
+      <div class="events__container">
+        <article class="events__event">
+          <img
+            src="images/event-1.png"
+            alt="painting"
+            class="events__image"
+          >
+
+          <div class="events__info">
+            <div class="events__top-info">
+              <p class="events__type">ВИСТАВКА</p>
+              <p class="events__date">26.08-29.11.2019</p>
+            </div>
+
+            <h3 class="events__name">
+              <a href="#">
+                Йду і повертаюсь
+              </a>
+
+            </h3>
+            <p class="events__description">
+              Національний Художній Музей України презентує унікальну
+              частину колекції Градобанку - українське мистецтво другої
+              половини 1980-1995 років.
+            </p>
+          </div>
+        </article>
+
+        <article class="events__event">
+          <img
+            src="images/event-2.png"
+            alt="painting"
+            class="events__image events__image--right"
+          >
+
+          <div class="events__info events__info--left">
+            <div class="events__top-info">
+              <p class="events__type">ВИСТАВКА</p>
+              <p class="events__date">26.08-29.11.2019</p>
+            </div>
+
+            <h3 class="events__name">
+              <a href="#">
+                І спогади і мрії
+              </a>
+            </h3>
+            <p class="events__description">
+              Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </article>
+      </div>
+
+      <article class="events__special-event">
+        <img
+          src="images/event-3.png"
+          alt="painting"
+          class="events__special-event-image"
+        >
+        <div class="events__card-container">
+          <a href="#" class="events__card">
+            <div class="events__top-info">
+              <p class="events__type">ЛЕКЦІЯ</p>
+              <p class="events__date">26/08/2019 - 11:00</p>
+            </div>
+
+            <h3 class="events__name events__name--special">
+              Від класицизму до романтизму
+            </h3>
+          </a>
+        </div>
+      </article>
+    </section>
+
+    <section class="page__section gallery" id="gallery">
+      <div class="gallery__content">
+        <h2 class="gallery__title title">Галерея</h2>
+
+        <div class="gallery__photos">
+          <div class="gallery__row">
+
+            <a href="#" class="gallery__photo">
+              <img
+              src="images/gallery-ph-1.png"
+              alt="painting"
+              class="gallery__pic"
+            >
+            </a>
+
+            <a href="#" class="gallery__photo">
+              <img
+                src="images/gallery-ph-2.png"
+                alt="painting"
+                class="gallery__pic"
+              >
+            </a>
+
+            <a href="#" class="gallery__photo">
+              <img
+                src="images/gallery-ph-3.png"
+                alt="painting"
+                class="gallery__pic"
+              >
+            </a>
+          </div>
+
+          <div class="gallery__row">
+            <a href="#" class="gallery__photo gallery__photo--smallRow">
+              <img
+                src="images/gallery-ph-4.png"
+                alt="painting"
+                class="gallery__pic"
+              >
+            </a>
+
+            <a href="#" class="gallery__photo gallery__photo--smallRow">
+              <img
+                src="images/gallery-ph-5.png"
+                alt="painting"
+                class="gallery__pic"
+              >
+            </a>
+
+            <a href="#" class="gallery__photo gallery__photo--smallRow">
+              <img
+              src="images/gallery-ph-6.png"
+              alt="painting"
+              class="gallery__pic"
+              >
+            </a>
+          </div>
+
+          <div class="gallery__slider slider">
+            <div class="slider__control slider__control--active"></div>
+            <div class="slider__control"></div>
+            <div class="slider__control"></div>
+            <div class="slider__control"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="page__section subscribe" id="subscribe">
+      <div class="subscribe__content">
+        <h2 class="subscribe__title title title--invert">
+          Підписка
+        </h2>
+
+        <p class="subscribe__subtitle">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+
+        <form
+          action="#"
+          method="get"
+          class="subscribe__form"
+        >
+          <div class="subscribe__form-content">
+            <input
+              type="email"
+              name="email"
+              class="subscribe__field"
+              placeholder="Email"
+              required
+            >
+            <button class="subscribe__button"></button>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__content">
+        <div class="footer__icons">
+          <a href="#" class="logo logo--onWhite">NA <br> MU</a>
+          <div class="">
+            <a
+              href="https://www.facebook.com/namu.museum"
+              target="_blank"
+              rel="noopener"
+              class="footer__icon footer__icon--fb"
+            >
+            </a>
+
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              target="_blank"
+              rel="noopener"
+              class="footer__icon footer__icon--inst"
+            >
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__schedule">
+          <h4 class="footer__title">Графік роботи</h4>
+
+          <div class="footer__time">
+            <p>
+              <span class="footer__hours">12:00 — 20:00</span>
+              <span class="footer__day">середа</span>
+            </p>
+            <p>
+              <span class="footer__hours">12:00 — 20:00</span>
+              <span class="footer__day">четвер</span>
+            </p>
+            <p>
+              <span class="footer__hours">12:00 — 20:00</span>
+              <span class="footer__day">п’ятниця</span>
+            </p>
+            <p>
+              <span class="footer__hours">11:00 — 19:00</span>
+              <span class="footer__day">субота</span>
+            </p>
+            <p>
+              <span class="footer__hours">11:00 — 19:00</span>
+              <span class="footer__day">неділя</span>
+            </p>
+          </div>
+
+          <p class="footer__paragraph">
+            Вихідні понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+
+        <div class="footer__contacts">
+          <h4 class="footer__title">Контакти:</h4>
+
+          <p class="footer__paragraph">
+            <a
+              class="footer__link"
+              href="https://goo.gl/maps/EYfSdkSn66b1rcme7"
+              target="_blank"
+              rel="noopener"
+            >
+              вул. М. Грушевського, 6; <br> Київ, 01001
+            </a>
+            <a class="footer__link" href="tel:+380442781357">тел. +38 (044) 278-13-57</a>
+            <a class="footer__link" href="tel:+380442787454">факс +38 (044) 278-74-54</a>
+            <a class="footer__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+          </p>
+        </div>
+
+        <a href="#" class="footer__scroll-button scroll-button"></a>
+
+        <nav class="footer__menu">
+          <ul class="footer__menu-content">
+            <li class="footer__menu-item">
+              <a href="#gallery" class="footer__link">Галерея</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#events" class="footer__link">Виставки та події</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__link">Відвідування</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#subscribe" class="footer__link">Стати нашим другом</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__link">Про Нас</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__link">Магазин</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__link">Блог</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
