--- a/src/index.html
+++ b/src/index.html
@@ -51,33 +51,35 @@
     <nav class="page__menu menu" id="menu">
       <div class="menu__content">
         <a href="#" class="menu__icon"></a>
-        <a href="#" class="menu__logo logo logo--onWhite">NA <br> MU</a>
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#gallery" class="menu__link">Галерея</a>
-          </li>
-          <li class="menu__item">
-            <a href="#events" class="menu__link">Виставки та події</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Відвідування</a>
-          </li>
-          <li class="menu__item">
-            <a href="#subscribe" class="menu__link">Стати нашим другом</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Про Нас</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Магазин</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Блог</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Контакти</a>
-          </li>
-        </ul>
+        <nav class="menu__nav">
+          <a href="#" class="menu__logo logo logo--onWhite">NA <br> MU</a>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#events" class="menu__link">Виставки та події</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Відвідування</a>
+            </li>
+            <li class="menu__item">
+              <a href="#subscribe" class="menu__link">Стати нашим другом</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Про Нас</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Магазин</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Блог</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </nav>
 
