--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 
         <div class="header__text">
           <h1 class="header__title">ХУДОЖ<span class="header__outline">НІЙ</span> МУЗЕЙ</h1>
-          <a href="#" class="button header__button">
+          <a href="#events" class="button header__button">
             <p class="button__text">КВИТКИ</p>
           </a>
         </div>
@@ -61,22 +61,22 @@
               <a href="#events" class="menu__link">Виставки та події</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Відвідування</a>
+              <a href="#events" class="menu__link">Відвідування</a>
             </li>
             <li class="menu__item">
               <a href="#subscribe" class="menu__link">Стати нашим другом</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Про Нас</a>
+              <a href="#gallery" class="menu__link">Про Нас</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Магазин</a>
+              <a href="#gallery" class="menu__link">Магазин</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Блог</a>
+              <a href="#subscribe" class="menu__link">Блог</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Контакти</a>
+              <a href="#contacts" class="menu__link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -168,55 +168,55 @@
         <div class="gallery__photos">
           <div class="gallery__row">
 
-            <a href="#" class="gallery__photo">
+            <div class="gallery__photo">
               <img
               src="images/gallery-ph-1.png"
               alt="painting"
               class="gallery__pic"
             >
-            </a>
+            </div>
 
-            <a href="#" class="gallery__photo">
+            <div class="gallery__photo">
               <img
                 src="images/gallery-ph-2.png"
                 alt="painting"
                 class="gallery__pic"
               >
-            </a>
+            </div>
 
-            <a href="#" class="gallery__photo">
+            <div class="gallery__photo">
               <img
                 src="images/gallery-ph-3.png"
                 alt="painting"
                 class="gallery__pic"
               >
-            </a>
+            </div>
           </div>
 
           <div class="gallery__row">
-            <a href="#" class="gallery__photo gallery__photo--smallRow">
+            <div class="gallery__photo gallery__photo--smallRow">
               <img
                 src="images/gallery-ph-4.png"
                 alt="painting"
                 class="gallery__pic"
               >
-            </a>
+            </div>
 
-            <a href="#" class="gallery__photo gallery__photo--smallRow">
+            <div class="gallery__photo gallery__photo--smallRow">
               <img
                 src="images/gallery-ph-5.png"
                 alt="painting"
                 class="gallery__pic"
               >
-            </a>
+            </div>
 
-            <a href="#" class="gallery__photo gallery__photo--smallRow">
+            <div class="gallery__photo gallery__photo--smallRow">
               <img
               src="images/gallery-ph-6.png"
               alt="painting"
               class="gallery__pic"
               >
-            </a>
+            </div>
           </div>
 
           <div class="gallery__slider slider">
@@ -258,7 +258,7 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer" id="contacts">
       <div class="footer__content">
         <div class="footer__icons">
           <a href="#" class="logo logo--onWhite">NA <br> MU</a>
@@ -341,22 +341,22 @@
               <a href="#events" class="footer__link">Виставки та події</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__link">Відвідування</a>
+              <a href="#events" class="footer__link">Відвідування</a>
             </li>
             <li class="footer__menu-item">
               <a href="#subscribe" class="footer__link">Стати нашим другом</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__link">Про Нас</a>
+              <a href="#gallery" class="footer__link">Про Нас</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__link">Магазин</a>
+              <a href="#gallery" class="footer__link">Магазин</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__link">Блог</a>
+              <a href="#subscribe" class="footer__link">Блог</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__link">Контакти</a>
+              <a href="#contacts" class="footer__link">Контакти</a>
             </li>
           </ul>
         </nav>
