--- a/src/index.html
+++ b/src/index.html
@@ -112,8 +112,9 @@
 
           <div class="promo__button">
             <a
-              href="#"
+              href="#gallery"
               class="promo__link"
+              
             >
               Квитки
             </a>
