--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,318 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum landing page</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="body">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__top-actions top-actions">
+          <a
+            href="#menu"
+            class="menu-btn"
+            for="menutoggler"
+          >
+            <div class="menu"></div>
+            <div class="menu"></div>
+            <div class="menu"></div>
+          </a>
+          <a href="#" class="header__title">
+            NA
+            <br>
+            MU
+          </a>
+        </div>
+        <section class="museum" id="museum">
+          <div class="museum__container">
+            <h1 class="museum__title">
+              Худож
+              <span class="header__outline"> ній </span>
+              музей
+            </h1>
+            <div class="museum__button_container">
+              <div class="museum__button">Квитки</div>
+              <a href="#" class="museum__arrow">
+                <img
+                  src="/images/museum/arrow.svg"
+                  alt="arrow image"
+                  class="img__arrow"
+                >
+              </a>
+            </div>
+            <div class="header__image_container">
+              <img
+                src="/images/header/header_image.png"
+                alt=""
+                class="header__image"
+              >
+            </div>
+          </div>
+        </section>
+        <nav class="page__menu menu" id="menu">
+          <div class="menu__container">
+            <div class="menu__top">
+              <div class="menu__content">
+                <a href="#" class="icon icon--cross"> </a>
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a href="#gallery" class="menu__link">Галерея</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#actual" class="menu__link">Виставки та Події</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#actual" class="menu__link">Відвідування</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#subscription" class="menu__link">Стати нашим другом</a>
+                  </li>
+
+                  <li class="menu__item">
+                    <a href="#contacts" class="menu__link">Про Нас</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#gallery" class="menu__link">Магазин</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#subscription" class="menu__link">Блог</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#contacts" class="menu__link">Контакти</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </nav>
+        <div class="header__position_container"></div>
+      </div>
+    </header>
+    <main class="main">
+      <section class="actual" id="actual">
+        <div class="actual__container">
+          <div class="actual__title">Актуальні події</div>
+          <div class="actual__card">
+            <img
+              src="/images/actual/actual__image.png"
+              alt=""
+              class="actual__image actual__image-hover"
+            >
+            <div class="actual__info_container">
+              <div class="actual__event">
+                <div class="actual__type">Виставка</div>
+                <div class="actual__date">26.08-29.11.2019</div>
+              </div>
+              <div class="actual__name">Йду і повертаюсь</div>
+              <div class="actual__info">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </div>
+            </div>
+          </div>
+          <div class="actual__card actual__card_2">
+            <img
+              src="/images/actual/actual__image_2.png"
+              alt=""
+              class="actual__image actual__image_2 actual__image-hover"
+            >
+            <div class="actual__info_container">
+              <div class="actual__event">
+                <div class="actual__type">Виставка</div>
+                <div class="actual__date">26.08-29.11.2019</div>
+              </div>
+              <div class="actual__name">І спогади і мрії</div>
+              <div class="actual__info">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </div>
+            </div>
+          </div>
+          <img
+            src="/images/actual/actual__image_3.png"
+            alt=""
+            class="actual__image actual__image_3 actual__image-position"
+          >
+          <div class="actual__card actual__card-position">
+            <div class="actual__event-position">
+              <div class="actual__event actual__event-card">
+                <div class="actual__type">Лекція</div>
+                <div class="actual__date">26/08/2019 - 11:00</div>
+              </div>
+              <div class="actual__name_1 actual__event-card">
+                Від класицизму до романтизму
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="gallery" id="gallery">
+        <div class="gallery__container">
+          <div class="gallery__title">Галерея</div>
+          <div class="gallery__image_container">
+            <img
+              src="/images/gallery/gallery_1.png"
+              alt="gallery image 1"
+              class="gallery__image image_1"
+            >
+            <img
+              src="/images/gallery/gallery_2.png"
+              alt="gallery image 2"
+              class="gallery__image image_2"
+            >
+            <img
+              src="/images/gallery/gallery_3.png"
+              alt="gallery image 3"
+              class="gallery__image image_3"
+            >
+            <img
+              src="/images/gallery/gallery_5.png"
+              alt="gallery image 5"
+              class="gallery__image image_5"
+            >
+            <img
+              src="/images/gallery/gallery_6.png"
+              alt="gallery image 6"
+              class="gallery__image image_6"
+            >
+            <img
+              src="/images/gallery/gallery_4.png"
+              alt="gallery image 4"
+              class="gallery__image image_4"
+            >
+          </div>
+          <div class="gallery__image_controls">
+            <div class="image__controls"></div>
+            <div class="image__controls"></div>
+            <div class="image__controls"></div>
+            <div class="image__controls"></div>
+          </div>
+        </div>
+      </section>
+      <section class="subscription" id="subscription">
+        <div class="subscription__container">
+          <div class="subscription__title">Підписка</div>
+          <div class="subscription__info">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+          <div class="subscription__form_container">
+            <form
+              action="#"
+              method="get"
+              class="subscription__form"
+              placeholder="email"
+            >
+              <input
+                type="text"
+                placeholder="Email"
+                class="placeholder__text"
+                required
+              >
+            </form>
+            <a href="#" class="subscription__button">
+              <img
+                src="/images/museum/arrow.svg"
+                alt="arrow"
+                class="subscription__button_arrow"
+              >
+            </a>
+          </div>
+        </div>
+      </section>
+      <footer class="footer" id="contacts">
+        <div class="footer__container">
+          <a href="#" class="footer__title">
+            NA
+            <br>
+            MU
+          </a>
+          <div class="footer__socials">
+            <div class="footer__facebook"></div>
+            <div class="footer__instagram"></div>
+          </div>
+          <div class="footer__schedule">
+            <div class="footer__schedule_title">Графік роботи</div>
+            <div class="footer__schedule_hours">
+              12:00 — 20:00 середа<br>
+              12:00 — 20:00 четвер<br>
+              12:00 — 20:00 п’ятниця<br>
+              11:00 — 19:00 субота<br>
+              11:00 — 19:00 неділя<br>
+              <br>
+              Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до
+              закриття музею
+            </div>
+          </div>
+          <div class="footer__contacts">
+            <div class="footer__contacts_title">Контакти:</div>
+            <div class="footer__contacts_map">
+              <a
+                href="https://goo.gl/maps/xHdUGL9k36m63GtZ7"
+                class="footer__contacts_map"
+              >
+                вул. М. Грушевського, 6; Київ, 01001<br>
+              </a>
+              <a href="tel:+38(044)278-13-57" class="footer__phone">
+                тел. +38 (044) 278-13-57
+              </a>
+              <a href="tel:+38(044)278-13-57" class="footer__phone">
+                факс +38 (044) 278-74-54 <br>
+              </a>
+              <a href="mailto: info@namu.kiev.ua" class="footer__email">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+            <a href="#" class="arrow-up">
+              <div class="footer__arrow-up"></div>
+            </a>
+          </div>
+          <div class="footer__line"></div>
+          <ul class="list__left">
+            <li class="list__item">
+              <a href="#gallery" class="list__link">Галерея</a>
+            </li>
+            <li class="list__item">
+              <a href="#actual" class="list__link">Виставки та події</a>
+            </li>
+            <li class="list__item">
+              <a href="#actual" class="list__link">Відвідування</a>
+            </li>
+            <li class="list__item">
+              <a href="#subscription" class="list__link">Стати нашим другом</a>
+            </li>
+          </ul>
+          <ul class="list__right">
+            <li class="list__item">
+              <a href="#contacts" class="list__link">Про нас</a>
+            </li>
+            <li class="list__item">
+              <a href="#gallery" class="list__link">Магазин та події</a>
+            </li>
+            <li class="list__item">
+              <a href="#subscription" class="list__link">Блог</a>
+            </li>
+            <li class="list__item">
+              <a href="#contacts" class="list__link">Контакти</a>
+            </li>
+          </ul>
+          <div class="footer__design">Designed by Zhyriada Marina</div>
+          <div class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+        </div>
+      </footer>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
