--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,7 @@
         <section class="museum" id="museum">
           <div class="museum__container">
             <h1 class="museum__title">
-              Худож
-              <span class="header__outline"> ній </span>
+              Худож<span class="header__outline">ній </span>
               музей
             </h1>
             <div class="museum__button_container">
