--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
     <link rel="shortcut icon" href="./images/headerLogo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Montserrat&display=swap"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page">
@@ -55,7 +54,7 @@
         <nav class="menu__navigation">
           <a href="#gallery">Галерея</a>
           <a href="#events">Виставки та події</a>
-          <a href="contact-info">Відвідування</a>
+          <a href="#contact-info">Відвідування</a>
           <a href="#subscription">Стати нашим другом</a>
           <a href="">Про Нас</a>
           <a href="">Магазин</a>
@@ -343,7 +342,7 @@
                 <div class="footer__media">
                   <a class="footer__media-facebook" href="https://www.facebook.com/namu.museum/">
                   </a>
-                  <a href="#" class="footer__media-inst">
+                  <a class="footer__media-inst" href="https://www.instagram.com/namu.museum/?hl=ru">
                   </a>
                 </div>
               </div>
@@ -380,14 +379,14 @@
                   <nav class="footer__navigation-section">
                     <a href="#gallery">Галерея</a>
                     <a href="#events">Виставки та події</a>
-                    <a href="contact-info">Відвідування</a>
-                    <a href="subscription">Стати нашим другом</a>
+                    <a href="#contact-info">Відвідування</a>
+                    <a href="#subscription">Стати нашим другом</a>
                   </nav>
                   <nav class="footer__navigation-section">
                     <a href="#">Про Нас</a>
                     <a href="#">Магазин</a>
                     <a href="#">Блог</a>
-                    <a href="contact-info">Контакти</a>
+                    <a href="#contact-info">Контакти</a>
                   </nav>
                 </div>
               </div>
@@ -556,7 +555,7 @@
             <div class="footer__media">
               <a class="footer__media-facebook" href="https://www.facebook.com/namu.museum/">
               </a>
-              <a href="#" class="footer__media-inst">
+              <a class="footer__media-inst" href="https://www.instagram.com/namu.museum/?hl=ru">
               </a>
             </div>
           </div>
@@ -598,14 +597,14 @@
               <nav class="footer__navigation-section">
                 <a href="#gallery">Галерея</a>
                 <a href="#events">Виставки та події</a>
-                <a href="contact-info">Відвідування</a>
-                <a href="subscription">Стати нашим другом</a>
+                <a href="#contact-info">Відвідування</a>
+                <a href="#subscription">Стати нашим другом</a>
               </nav>
               <nav class="footer__navigation-section">
                 <a href="#">Про Нас</a>
                 <a href="#">Магазин</a>
                 <a href="#">Блог</a>
-                <a href="contact-info">Контакти</a>
+                <a href="#contact-info">Контакти</a>
               </nav>
             </div>
           </div>
