scroll and text decoration are fixed

--- a/src/index.html
+++ b/src/index.html
@@ -262,13 +262,13 @@
               >
                 вул. М. Грушевського, 6; Київ, 01001<br>
               </a>
-              <a href="tel:+38(044)278-13-57" class="footer__phone">
+              <a href="tel:+38(044)278-13-57" class="footer__phone links">
                 тел. +38 (044) 278-13-57
               </a>
-              <a href="tel:+38(044)278-13-57" class="footer__phone">
+              <a href="tel:+38(044)278-13-57" class="footer__phone links">
                 факс +38 (044) 278-74-54 <br>
               </a>
-              <a href="mailto: info@namu.kiev.ua" class="footer__email">
+              <a href="mailto: info@namu.kiev.ua" class="footer__email links">
                 e-mail: info@namu.kiev.ua
               </a>
             </div>
