--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/favicon.png"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin=""
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;0,500;0,600;0,700;1,400&family=Montserrat:wght@400;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="body page__body">
+    <header class="header body__header" id="home">
+      <div class="header__container-nav">
+        <div class="header__menu-opener">
+          <a href="#menu" class="header__menu-opener">
+            <img src="./images/menu.png" alt="menu opener">
+          </a>
+        </div>
+        <div class="header__logo">
+          <a href="#home" class="logo">
+            NA
+            <br>
+            MA
+          </a>
+        </div>
+      </div>
+
+      <h1 class="title header__title">
+        Худож<span class="title__transparent">ній</span>
+        <br>
+        музей
+      </h1>
+
+      <a href="#buy" class="button header__button">
+        <div class="button__text">
+          Квитки
+        </div>
+        <div class="button__cube">
+          >
+        </div>
+      </a>
+
+      <span class="header__text-events">Події</span>
+    </header>
+
+    <div class="menu page__menu" id="menu">
+      <nav>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Головна
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Актуальні події
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Галерея
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Підписка
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </body>
 </html>
