--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,55 @@
               </div>
             </div>
           </div>
+
+          <div class="section__event event">
+            <div class="grid grid--tablet">
+              <div class="grid__item grid__item--desktop-6-12 grid__item--tablet-1-6">
+                <div class="event__photo-container">
+                  <img
+                    src="./images/Rectangle 4.1.png"
+                    alt="Картина Тетяни Яблонської"
+                    class="event__photo"
+                  >
+                </div>
+              </div>
+
+              <div class="grid__item grid__item--desktop-1-4 grid__item--tablet-1-4">
+                <div class="event__info">
+                  <div class="event__type">Виставка</div>
+
+                  <div class="event__date">26.08-29.11.2019</div>
+                </div>
+
+                <h3 class="event__title">І спогади і мрії</h3>
+
+                <div class="event__description">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section lecture">
+        <div class="container container--without-padding">
+          <img
+            src="./images/Rectangle20.png"
+            alt="Картина заходу сонця"
+            class="lecture__photo"
+          >
+
+          <div class="lecture__info">
+            <div class="lecture__info-top">
+              <div class="lecture__type">Лекція</div>
+              <div class="lecture__time">26/08/2019 - 11:00</div>
+            </div>
+            <h3 class="lecture__name">
+              Від класицизму до романтизму
+            </h3>
+          </div>
         </div>
       </section>
     </main>
