--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="no"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header page__header">
+      <div class="header__nav">
+        <a href="#menu" class="header__icon--menu"></a>
+        <a href="#" class="logo">
+          <span class="logo__text">
+            NA
+            <br>
+            MU
+          </span>
+        </a>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <a href="#" class="menu__logo logo">
+            <span class="logo__text">
+              NA
+              <br>
+              MU
+            </span>
+          </a>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Художній Музей</a>
+            </li>
+            <li class="menu__item">
+              <a href="#current-events" class="menu__link">Актуальні події</a>
+            </li>
+            </li>
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Від класицизму до романтизму</a>
+            </li>
+          </li>
+            <li class="menu__item">
+              <a href="#testimonials" class="menu__link">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#testimonials" class="menu__link">Підписка</a>
+            </li>
+          </li>
+            <li class="menu__item">
+              <a href="#contact-us" class="menu__link">Contact us</a>
+            </li>
+          </ul>
+        </div>
+
+
+      </div>
+    </nav>
+
+    <section class="museum">
+      <h1 class="museum__title">
+        ХУДОЖ<span class="museum__span">НІЙ</span>
+        <br>
+        МУЗЕЙ
+      </h1>
+      <div class="museum__button">
+        <div class="museum__button-link">КВИТКИ</div>
+        <div class="museum__button-arrow">
+          <img src="/images/arrow.svg" alt=">">
+        </div>
+      </div>
+    </section>
+
+    <section class="current-events" id="current-events">
+      <h2 class="current-events__title">
+        Актуальні події
+      </h2>
+      <div class="events grid">
+        <img
+          class="events__img"
+          src="/images/events1.jpg"
+          alt="events1"
+        >
+        <div class="wraper">
+          <div class="events__block">
+            <span class="events__block-type">ВИСТАВКА</span>
+            <span class="events__block-data">26.08-29.11.2019</span>
+          </div>
+          <h3 class="events__title">
+            Йду і повертаюсь
+          </h3>
+          <p class="events__text">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
