--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="favicon"
+      type="image/svg"
+      href="images/NA MU.svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header page__section">
+
+      <div class="container">
+
+        <div class="header__background-mobile"></div>
+
+        <nav class="header__nav">
+          <a href="#" class="header__menu-opener"></a>
+          <a href="#" class="logo">
+            NA
+            <br>
+            MU
+          </a>
+          <div class="header__third-element"></div>
+        </nav>
+
+        <div class="header__content">
+
+          <div class="header__content-container">
+            <h1 class="header__title">
+              Худож
+              <span class="header__title-part">ній</span> <br>
+              музей
+            </h1>
+
+            <div class="header__tickets">
+              <div class="header__tickets-signature">
+                Квитки
+              </div>
+              <div class="header__tickets-arrow">
+                <img
+                  src="./images/Vector (1).svg"
+                  alt="tickets arrow"
+                  class="header__tickets-logo"
+                >
+              </div>
+            </div>
+
+
+            <div class="header__background-tablet"></div>
+          </div>
+        </div>
+
+
+
+
+      </div>
+    </header>
+
+    <nav class="menu">
+      <div class="container">
+        <div class="menu__content">
+        </div>
+      </div>
+    </nav>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
