--- a/src/index.html
+++ b/src/index.html
@@ -86,13 +86,14 @@
       <h2 class="current-events__title">
         Актуальні події
       </h2>
+
       <div class="events grid">
         <img
-          class="events__img"
+          class="events__img grid__item--onDesktop-1-7"
           src="/images/events1.jpg"
           alt="events1"
         >
-        <div class="wraper">
+        <div class="wraper grid__item--onDesktop-9-12">
           <div class="events__block">
             <span class="events__block-type">ВИСТАВКА</span>
             <span class="events__block-data">26.08-29.11.2019</span>
@@ -105,6 +106,27 @@
           </p>
         </div>
       </div>
+
+      <div class="events grid grid--revers">
+        <img
+          class="events__img grid__item--onDesktop-1-7"
+          src="/images/events2.jpg"
+          alt="events1"
+        >
+        <div class="wraper grid__item--onDesktop-9-12">
+          <div class="events__block">
+            <span class="events__block-type">ВИСТАВКА</span>
+            <span class="events__block-data">26.08-29.11.2019</span>
+          </div>
+          <h3 class="events__title">
+            І спогади і мрії
+          </h3>
+          <p class="events__text">
+            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </div>
+      </div>
     </section>
+
   </body>
 </html>
