--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
             </li>
             </li>
             <li class="menu__item">
-              <a href="#gallery" class="menu__link">Від класицизму до романтизму</a>
+              <a href="#classicism" class="menu__link">Від класицизму до романтизму</a>
             </li>
           </li>
             <li class="menu__item">
@@ -125,6 +125,27 @@
             Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
           </p>
         </div>
+      </div>
+    </section>
+
+    <section class="classicism" id="classicism">
+      <img
+        src="/images/classicism.png"
+        alt="classicism"
+        class="classicism__img"
+      >
+      <div class="classicism__action">
+        <div class="classicism__event-block">
+          <span class="classicism__lecture">
+            ЛЕКЦІЯ
+          </span>
+          <span class="classicism__data">
+            26/08/2019 - 11:00
+          </span>
+        </div>
+        <h3 class="classicism__title">
+          Від класицизму до романтизму
+        </h3>
       </div>
     </section>
 
