--- a/src/index.html
+++ b/src/index.html
@@ -253,7 +253,7 @@
             <div class="footer__content">
               <a
                 href="https://goo.gl/maps/oJ2FAmWd3envvXzZA"
-                class="footer__contact"
+                class="footer__contact link"
                 target="blank"
               >
                 вул. М. Грушевського, 6; Київ, 01001
@@ -261,26 +261,61 @@
 
               <a
                 href="tel:+38 (044) 278-13-57"
-                class="footer__contact"
+                class="footer__contact link"
               >
                 тел. +38 (044) 278-13-57
               </a>
 
               <a
-                href=""
-                class="footer__contact"
+                href="tel:+38 (044) 278-74-54"
+                class="footer__contact link"
               >
                 факс +38 (044) 278-74-54
               </a>
 
               <a
-                href=""
-                class="footer__contact"
+                href="mailto:info@namu.kiev.ua"
+                class="footer__contact link"
               >
                 e-mail: info@namu.kiev.ua
               </a>
             </div>
           </div>
+
+          <a href="#" class="footer__scroll-up">
+            <img src="./images/Vectorarrow-up.svg" alt="return to the top of page">
+          </a>
+
+          <div class="grid__item footer__line grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7">
+          </div>
+
+          <div class="grid__item grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
+            <div class="footer__content">
+              <a href="#" class="footer__link link">Галерея</a>
+            </div>
+            <div class="footer__content">
+              <a href="#" class="footer__link link">Виставки та події</a>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
+            <div class="footer__content">
+              <a href="#" class="footer__link link">Про Нас</a>
+            </div>
+            <div class="footer__content">
+              <a href="#" class="footer__link link">Контакти</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__bottom">
+          <span class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </span>
+
+          <span class="footer__designer">
+            Designed by Zhyriada Marina
+          </span>
         </div>
       </div>
     </footer>
