--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
       type="image/x-icon"
       href="./images/favicon.png"
     >
-    <link rel="stylesheet" href="./styles/main.scss">
     <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+    <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
       rel="preconnect"
@@ -214,15 +214,66 @@
         </div>
       </section>
 
-      <section class="section" id="gallery">
-        gallery
+      <section class="gallery main__gallery" id="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+
+        <div class="gallery__scroll">
+          <img
+            src="./images/gallery/gallery1.png"
+            alt="picture1"
+            class="gallery__img"
+          >
+          <img
+            src="./images/gallery/gallery2.png"
+            alt="picture2"
+            class="gallery__img"
+          >
+          <img
+            src="./images/gallery/gallery3.png"
+            alt="picture3"
+            class="gallery__img"
+          >
+          <img
+            src="./images/gallery/gallery4.png"
+            alt="picture4"
+            class="gallery__img"
+          >
+        </div>
+
+        <div class="gallery__circle-position circle-position circle-position--select-1">
+          <div class="circle-position__circle"></div>
+          <div class="circle-position__circle"></div>
+          <div class="circle-position__circle"></div>
+          <div class="circle-position__circle"></div>
+        </div>
       </section>
 
-      <section class="section" id="subscribe">
-        subscribe
+      <section class="subscribe main__subscribe" id="subscribe">
+        <h2 class="subscribe__title">
+          Підписка
+        </h2>
+        <h3 class="subscribe__sub-title">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </h3>
+
+        <form
+          action=""
+          get="get"
+          class="subscribe__form"
+        >
+          <input
+            type="email"
+            name="email"
+            placeholder="Email"
+            class="subscribe__input"
+            required
+          >
+
+          <button class="subscribe__button" type="submit">></button>
+        </form>
       </section>
 
-      <section class="section" id="contacts">
+      <section class="contacts main__contacts" id="contacts">
         contacts
       </section>
       <footer>
