--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
             </li>
           </li>
             <li class="menu__item">
-              <a href="#testimonials" class="menu__link">Галерея</a>
+              <a href="#gallery" class="menu__link">Галерея</a>
             </li>
             <li class="menu__item">
               <a href="#testimonials" class="menu__link">Підписка</a>
@@ -128,7 +128,7 @@
       </div>
     </section>
 
-    <section class="classicism" id="classicism">
+    <section class="classicism page__classicism" id="classicism">
       <img
         src="/images/classicism.png"
         alt="classicism"
@@ -149,5 +149,41 @@
       </div>
     </section>
 
+    <section class="gallery page__gallery" id="gallery">
+      <h2 class="gallery__title">Галерея</h2>
+      <div class="gallery__content">
+        <img
+          src="./images/gallery1.png"
+          alt="gallery image"
+          class="gallery__img"
+        >
+        <img
+          src="./images/gallery2.jpg"
+          alt="gallery image"
+          class="gallery__img gallery__hidden"
+        >
+        <img
+         src="./images/gallery3.png"
+         alt="gallery image"
+         class="gallery__img"
+        >
+        <img
+          src="./images/gallery4.png"
+          alt="gallery image"
+          class="gallery__img"
+        >
+        <img
+          src="./images/gallery5.png"
+          alt="gallery image"
+          class="gallery__img"
+        >
+      </div>
+      <div class="gallery__toggle">
+        <div class="gallery__toggle--point active"></div>
+        <div class="gallery__toggle--point"></div>
+        <div class="gallery__toggle--point"></div>
+        <div class="gallery__toggle--point"></div>
+      </div>
+    </section>
   </body>
 </html>
